@@ -1,13 +1,11 @@
 package br.com.cardappio.payment.service;
 
-import br.com.cardappio.domain.order.Order;
-import br.com.cardappio.domain.order.OrderRepository;
-import br.com.cardappio.domain.ticket.Ticket;
-import br.com.cardappio.domain.ticket.TicketRepository;
-import br.com.cardappio.enums.OrderStatus;
-import br.com.cardappio.enums.TicketStatus;
-import br.com.cardappio.payment.dto.AbacatePayRequestDTO;
-import br.com.cardappio.payment.dto.AbacatePixResponseDTO;
+import java.math.BigDecimal;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpEntity;
@@ -17,29 +15,48 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import br.com.cardappio.domain.order.Order;
+import br.com.cardappio.domain.order.OrderRepository;
+import br.com.cardappio.domain.ticket.Ticket;
+import br.com.cardappio.domain.ticket.TicketRepository;
+import br.com.cardappio.enums.OrderStatus;
+import br.com.cardappio.enums.TicketStatus;
+import br.com.cardappio.payment.dto.AbacatePayRequestDTO;
+import br.com.cardappio.payment.dto.AbacatePixResponseDTO;
+import lombok.extern.log4j.Log4j2;
 
 @Service
+@Log4j2
 public class AbacatePayService {
 
     @Value("${abacatepay.api.key}")
     private String apiKey;
+
     @Value("${abacatepay.api.base-url}")
     private String baseUrl;
+
+    @Value("${abacatepay.api.return-url}")
+    private String returnUrl;
+
+    @Value("${abacatepay.api.completion-url}")
+    private String completionUrl;
+
     @Value("${abacatepay.api.webhook.url}")
     private String webhookUrl;
+
     @Value("${abacatepay.api.webhook.secret}")
     private String webhookSecret;
     private static final String PIX_SIMULATE_ENDPOINT = "/pixQrCode/simulate-payment";
 
-    @Autowired private OrderRepository orderRepository;
-    @Autowired private TicketRepository  ticketRepository;
+    private static final String PAID_STATUS = "PAID";
+    @Autowired
+    private OrderRepository orderRepository;
+
     private final RestTemplate restTemplate = new RestTemplate();
+
     private static final String PIX_QRCODE_ENDPOINT = "/pixQrCode/create";
+    @Autowired
+    private TicketRepository ticketRepository;
 
     public AbacatePixResponseDTO createPixBilling(AbacatePayRequestDTO request) {
 
@@ -131,7 +148,7 @@ public class AbacatePayService {
         }
 
         if (pixIdToSearch == null || status == null) {
-            System.err.println("ALERTA CRÍTICO: Falha na extração. ID ou Status não encontrado. ID do Evento: " + eventId);
+            log.error("ALERTA CRÍTICO: Falha na extração. ID ou Status não encontrado. ID do Evento: {}", eventId);
             return;
         }
 
@@ -142,11 +159,11 @@ public class AbacatePayService {
 
             List<Order> pendingOrders = ticket.getOrders().stream()
                     .filter(order -> order.getStatus() == OrderStatus.PENDING)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (!pendingOrders.isEmpty()) {
 
-                if ("PAID".equalsIgnoreCase(status)) {
+                if (PAID_STATUS.equalsIgnoreCase(status)) {
                     for (Order order : pendingOrders) {
                         order.setStatus(OrderStatus.PAID);
                         orderRepository.save(order);
@@ -154,23 +171,25 @@ public class AbacatePayService {
                     ticket.setStatus(TicketStatus.FINISHED);
                     ticketRepository.save(ticket);
 
-                    System.out.println("SUCESSO: Cobrança " + pixIdToSearch + " APROVADA. Comanda #" + ticket.getNumber() + " e Orders atualizados para PAGO/FINALIZADA.");
+                    log.info("SUCESSO: Cobrança {} APROVADA. Comanda #{} e Orders atualizados para PAGO/FINALIZADA.", pixIdToSearch,
+                            ticket.getNumber());
 
                 } else if ("REJECTED".equalsIgnoreCase(status) || "CANCELED".equalsIgnoreCase(status)) {
                     for (Order order : pendingOrders) {
                         order.setStatus(OrderStatus.FAILED);
                         orderRepository.save(order);
                     }
-                    System.out.println("AÇÃO: Cobrança " + pixIdToSearch + " Falhou/Cancelada. Orders atualizadas para FAILED.");
+                    log.info("AÇÃO: Cobrança {} Falhou/Cancelada. Orders atualizadas para FAILED.", pixIdToSearch);
 
                 } else {
-                    System.out.println("AVISO: Status intermediário '" + status + "'.");
+                    log.info("AVISO: Status intermediário '{}'.", status);
                 }
             } else {
-                System.out.println("AVISO: Comanda #" + ticket.getNumber() + " já estava com pedidos processados/pagos. Ignorando notificação duplicada.");
+                log.info("AVISO: Comanda #{} já estava com pedidos processados/pagos. Ignorando notificação duplicada.",
+                        ticket.getNumber());
             }
         } else {
-            System.err.println("ALERTA CRÍTICO: PIX ID '" + pixIdToSearch + "' não encontrado no BD. Necessita auditoria.");
+            log.error("ALERTA CRÍTICO: PIX ID '{}' não encontrado no BD. Necessita auditoria.", pixIdToSearch);
         }
     }
 
